hashicorp/vault/vault-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: vault
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: vault.intranet.agride.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vault
            port:
              name: http
  tls:
  - hosts:
    - vault.intranet.agride.xyz
    secretName: vault-tls # as expected by argocd-server
